# Korolev-OOP-Labs-2024

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lab1/: CMakeLists.txt  main.cpp
lab1/ConsoleController/: CMakeLists.txt  ConsoleController.cpp  ConsoleController.h
lab1/newmath/: CMakeLists.txt  newmath.cpp  newmath.h
lab2/: CMakeLists.txt  main.cpp
lab2/planet/: CMakeLists.txt  planet.cpp  planet.h
lab2/shop/: CMakeLists.txt  shop.cpp  shop.h
lab3/: CMakeLists.txt  main.cpp
lab3/fraction/: CMakeLists.txt  fraction.cpp  fraction.h
lab4/: CMakeLists.txt  main.cpp
lab4/MyStack/: CMakeLists.txt  MyStack.h
lab5/: main.cpp
lab5/containers/: myset.cpp  myset.h  myvector.cpp  myvector.h
lab6/: CMakeLists.txt  main.cpp
lab6/Polynomial/: CMakeLists.txt  Polynomial.cpp  Polynomial.h
lab6/lib/: MyVector.h
lab7/: CMakeLists.txt  main.cpp
lab7/Animal/: Animal.cpp  Animal.h  CMakeLists.txt
lab8/: CMakeLists.txt  main.cpp
